unpackaged/main/default/objects/ShipmentItem/fields/CrossBorderId__c.field-meta.xml
<CustomField>
    <fullName>CrossBorderId__c</fullName>
    <label>CrossBorderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>