unpackaged/main/default/objects/ShipmentItem/fields/LocationExternalReference__c.field-meta.xml
<CustomField>
    <fullName>LocationExternalReference__c</fullName>
    <formula>FulfillmentOrderLineItem.FulfillmentOrder.FulfilledFromLocation.ExternalReference</formula>
    <label>Location External Reference</label>
    <type>Text</type>
</CustomField>