unpackaged/main/default/objects/ShipmentItem/fields/Sku10Digits__c.field-meta.xml
<CustomField>
    <fullName>Sku10Digits__c</fullName>
    <label>Sku 10 Digits</label>
    <length>10</length>
    <type>Text</type>
</CustomField>