unpackaged/main/default/objects/ShipmentItem/fields/StockKeepingUnit__c.field-meta.xml
<CustomField>
    <fullName>StockKeepingUnit__c</fullName>
    <formula>Product2.StockKeepingUnit</formula>
    <label>Stock Keeping Unit</label>
    <type>Text</type>
</CustomField>